Pull request #217: Fix/AG-4341
Merge in VPN/browser-extension from fix/AG-4341 to master

Squashed commit of the following:

commit fb32f2a44304756f52c671d1c15da814c6dd8ea1
Author: Maxim Topciu <maximtop@gmail.com>
Date:   Fri Sep 25 17:33:00 2020 +0300

    AG-4341 update locales

commit 769f7317544158f1082063925b6d771983d209a9
Author: Maxim Topciu <maximtop@gmail.com>
Date:   Fri Sep 25 17:30:35 2020 +0300

    AG-4341 decrease font size on registration screen

--- a/src/popup/components/Authentication/Presentation/presentation.pcss
+++ b/src/popup/components/Authentication/Presentation/presentation.pcss
@@ -15,11 +15,11 @@
     }
 
     &__title {
-        font-size: 36px;
+        font-size: 28px;
         font-weight: 700;
     }
 
     &__desc {
-        font-size: 20px;
+        font-size: 16px;
     }
 }
